# blinkion

./: Cargo.toml  Dioxus.toml  README.md
assets/: icon.rgba  main.css  posture.css  tailwind.css
src/: main.rs  reminder.rs  shared_state.rs  signals.rs
src/components/: animated_blink.rs  animated_posture.rs  mod.rs  reminder_window.rs  settings_window.rs
