[package]
name = "blinkion"
version = "0.1.0"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.2", features = [] }
dioxus-desktop = "0.7.0-alpha.2"
tokio = { version = "1.46.1", features = ["full"] }
dioxus-motion = { git = "https://github.com/wheregmis/dioxus-motion.git", branch = "main", default-features = false }
once_cell = "1.19.0"
futures-channel = "0.3"
futures-util = "0.3"
image = "0.24"

[features]
default = ["desktop", "dioxus-motion/desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
